--- a/_includes/case-study-row.njk
+++ b/_includes/case-study-row.njk
@@ -1,4 +1,4 @@
-{% from './client-logo.njk' import clientLogo %}
+{# {% from './client-logo.njk' import clientLogo %} #}
 {# {% if caseStudy.data.viewTheWork %}
         <a class="case-study-block__link" href="{{ caseStudy.data.link }}">View the work →</a>
     {% elif caseStudy.content.length > 0 %}
@@ -18,7 +18,12 @@
             <span class="case-study-row__echo" aria-hidden="true">{{ caseStudy.data.title }}</span>
         </div>
         <h1 class="case-study-row__title">
-            {{ clientLogo(title = caseStudy.data.title.toLowerCase(), class = 'case-study-row__logo') }}
+            {# {% renderTemplate 'webc'%}
+            {% endrenderTemplate %} #}
+            {# {% renderTemplate 'webc', {title: caseStudy.data.title.toLowerCase(), class: 'case-study-row__logo' } %}
+            {# {{ clientLogo(title = caseStudy.data.title.toLowerCase(), class = 'case-study-row__logo') }} 
+            <client-logo :title="title" :class="class"></client-logo>
+            {% endrenderTemplate %} #}
             <div class="case-study-row__title-text">
                 <span class="case-study-row__half">{{- caseStudy.data.title.slice(0, caseStudy.data.titleSplitIndex) -}}
                 </span><span class="case-study-row__title-divider"></span><span class="case-study-row__half">
