--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,13 +37,13 @@
     {% renderTemplate "webc"%}
         <template webc:nokeep webc:if="page.url === '/'">
             <link rel="preload" href="/fonts/manuka-black.woff2" as="font" type="font/woff2" crossorigin />
-            <link rel="preload" href="fonts/subset-LouizeDisplaytrial.woff2" as="font" type="font/woff2" crossorigin />
-            <link rel="preload" href="fonts/subset-LouizeDisplaytrial-Italic.woff2" as="font" type="font/woff2" crossorigin />
+            <link rel="preload" href="/fonts/subset-LouizeDisplaytrial.woff2" as="font" type="font/woff2" crossorigin />
+            <link rel="preload" href="/fonts/subset-LouizeDisplaytrial-Italic.woff2" as="font" type="font/woff2" crossorigin />
             <link rel="preload" href="/fonts/PPNeueMontreal-Book.woff2" as="font" type="font/woff2"
         crossorigin />
         </template>
         <template webc:nokeep webc:else> 
-            <link rel="preload" href="fonts/subset-Louizetrial.woff2" as="font" type="font/woff2" crossorigin />
+            <link rel="preload" href="/fonts/subset-Louizetrial.woff2" as="font" type="font/woff2" crossorigin />
         </template>
     {% endrenderTemplate %}
 
@@ -70,5 +70,8 @@
     {# TODO: Remove splitting dependency #}
     <script src="/js/vendor/splitting.min.js"></script>
     <script src="/js/index.js" type="module"></script>
+    {% if page.url === '/' %}
+    <script src="/js/home.js" type="module"></script>
+    {% endif %}
 </body>
 </html>
