--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -55,7 +55,7 @@
     {% renderTemplate "webc", {site: site, backLink: backLink, backLinkText: backLinkText} %}
         <page-nav :@back-link="backLink" :@back-link-text="backLinkText"></page-nav>
     {% endrenderTemplate %}
-    <div data-taxi>
+    <div data-taxi class="router-target">
         <div data-taxi-view view={{ page.url }}>
         {{ content | safe }}
         {% renderTemplate "webc", { backLink: backLink, backLinkText: backLinkText } %}
