🖼️  - Add image processing to posts and case studies via cloudinary and eleventy-img

--- a/_includes/layouts/_article.njk
+++ b/_includes/layouts/_article.njk
@@ -40,7 +40,7 @@ bodyClass: "article"
     {% if hasToc %}
         {% set toc = content | getTOC %}
         {% include 'table-of-contents.njk' %}
-        <img src="/img/cdf-landscape.png" class="article-header__image">
+        <img alt="" src="/img/cdf-landscape.png" class="article-header__image">
     {% endif %}
 </header>
 
