--- a/about.njk
+++ b/about.njk
@@ -8,21 +8,16 @@
     },
 }
 ---
-{# {% renderTemplate "webc" %}
-    <page-nav></page-nav>
-{% endrenderTemplate %} #}
-
 <header class="page-header">
     <div class="page-header__inner">
         <h1 class="page-header__title page-header__title--about-adjust">About the author</h1>
-        <img class="page-header__image page-header__image--first page-header__image--ghost" src="/img/ghost.svg">
-        {# <p class="page-header__description">A portrait of the author as a young man.</p> #}
+        <img class="page-header__image page-header__image--first page-header__image--ghost" src="/img/ghost.svg" alt="">
     </div>
 </header>
 
 <article class="about-layout">
     <figure class="about-layout__avatar card-figure">
-        <img src="/img/statuary.jpg" />
+        <img src="/img/statuary.jpg" alt="A dithered, monochrome rendering of a white man with white hair from the neck up. He stares into the middle distance, though it’s hard to tell as the pupils of his eyes have been edited out."/>
         <figcaption>A portrait of the author as a young man.</figcaption>
     </figure>
     <section class="card about-layout__section about-layout__who">
