--- a/scss/components/_article-header.scss
+++ b/scss/components/_article-header.scss
@@ -1,5 +1,5 @@
-@use "../abstract/variables" as *;
-@use "../abstract/mixins" as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
 .article-header {
   margin-block-start: 18rem;
@@ -101,9 +101,16 @@
     // list-style: none;
     padding: 0;
   }
-  &__image {
+  picture:has(.article-header__image) {
     border: 2px solid $color-text;
     border-radius: $bdrs;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: bottom center;
+    }
 
     @include screen(sm) {
       grid-column: 1 / span 2;
