--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,7 @@
-@use "../abstract/variables" as *;
-@use "../abstract/mixins" as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
-.footer-border {
+picture:has(.footer-border) {
   width: 100%;
   object-fit: cover;
   object-position: bottom right;
@@ -17,6 +17,10 @@
   @include screen(lg) {
     object-fit: contain;
     aspect-ratio: auto;
+  }
+
+  img {
+    height: 100%;
   }
 }
 
@@ -71,10 +75,10 @@
       left: 0;
       // content: "↴";
       // content: "↘";
-      content: "⮡";
+      content: '⮡';
       text-decoration: none;
       @include screen(lg) {
-        content: "→";
+        content: '→';
       }
     }
     @for $nth from 2 through 5 {
@@ -91,7 +95,7 @@
         padding-inline-start: 0;
       }
       &:before {
-        content: "→";
+        content: '→';
         @include screen(lg) {
           content: unset;
         }
@@ -199,7 +203,7 @@
       left: 0;
       width: 100%;
       height: 1px;
-      content: "";
+      content: '';
       transition: transform 0.2s $ease-out-editorial;
       transform: scaleX(0);
       transform-origin: 0 0;
