--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,7 +74,7 @@
     grid-template-columns: repeat(12, minmax(0, 1fr));
 
     --standard-column: 4 / span 6;
-    --pre-column: 4 / span 6;
+    --pre-column: 4 / span 7;
     > * {
       grid-column: var(--standard-column);
     }
@@ -109,6 +109,7 @@
 
     @include screen(magazine) {
       max-width: unset;
+      padding: 1.5rem;
     }
   }
 }
