--- a/_includes/article-block.njk
+++ b/_includes/article-block.njk
@@ -8,10 +8,9 @@
         <div>
             <dt class="visually-hidden">Tags</dt>
             <dd>
-                {% for topic in article.data.topics %}
-                    {{ topic }}
-                    {%- if not loop.last %} | {% endif %}
-                {% endfor %}
+                {%- for topic in article.data.topics -%}
+                    {{- topic -}} {%- if not loop.last %} | {% endif %}
+                {%- endfor -%}
             </dd>
         </div>
     </dl>
