--- a/_components/page-nav-data.webc
+++ b/_components/page-nav-data.webc
@@ -1,2 +1,3 @@
 <script id="page-nav-data" webc:keep type="application/json"
-    @raw="JSON.stringify({backLink: backLink || '/', backLinkText: backLinkText || 'go home'})"></script>
+    @raw="JSON.stringify({backLink: backLink || '/', backLinkText: backLinkText || 'go home', footerLinks: footerLinks})">
+</script>
