--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@
 @use 'components/case-header';
 @use 'components/speaking-list';
 @use 'components/post';
+@use 'components/embed';
 
 @use 'pages/home';
 @use 'pages/work';
