--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -131,6 +131,9 @@ picture:has(.footer-border) {
       margin-block-end: 0;
     }
 
+    &--collapsed {
+      display: none;
+    }
     &--breadcrumb {
       margin-block-end: 4rem;
 
