🗺️  - Home-to-{slug} transitions, clean up JS a bit

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -72,7 +72,7 @@
     <script src="/js/vendor/splitting.min.js"></script>
     <script src="/js/index.js" type="module"></script>
     {% if page.url === '/' %}
-    <script src="/js/home.js" type="module"></script>
+    <script data-taxi-reload src="/js/home.js" type="module"></script>
     {% endif %}
 </body>
 </html>
