--- a/scss/components/_spotify-widget.scss
+++ b/scss/components/_spotify-widget.scss
@@ -7,8 +7,10 @@
     display: inline-block;
   }
   &__icon {
-    max-width: 0.75rem;
+    max-width: #{0.75rem + 0.5rem};
     width: 100%;
     display: inline-block;
+    padding: 0.5rem;
+    margin: -0.5rem;
   }
 }
