--- a/_includes/layouts/og.njk
+++ b/_includes/layouts/og.njk
@@ -14,7 +14,7 @@ crossorigin />
     <link rel="stylesheet" href="/css/og.css"></link>
 </head>
 
-<body>
+<body{% if theme %} class="light"{% endif %}>
     {{ content | safe }}
     <footer class="footer">
         <span class="season">✷ ver. fw24</span>
