--- a/opengraph/_note.njk
+++ b/opengraph/_note.njk
@@ -5,7 +5,7 @@ pagination:
   alias: "note"
 layout: "layouts/og.njk"
 permalink: "/opengraph/{{ note.url }}"
-theme: light
+bodyClass: light
 ---
 <div class="container">
   <p class="intro">A <span class="accent">quick note</span> from the tumultuous desk of <span class="accent">Henry (From Online)</span></p>
