--- a/src/opengraph/_case.njk
+++ b/src/opengraph/_case.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: "collections['case study']"
+  data: "collections['hosted case study']"
   size: 1
   alias: "case"
 layout: "layouts/og.njk"
