🛜 - Add RSS feeds

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -12,7 +12,7 @@
             {# {% endif %} #}
             <section class="footer__section">
                 <div class="footer__meta-title">✷ SS24</div>
-                <a class="footer__link" href="#">Home</a>
+                <a class="footer__link" href="/">Home</a>
             </section>
             {% for linkGroup in site.nav %}
             <section class="footer__section footer__section--link-group">
