--- a/src/notes.njk
+++ b/src/notes.njk
@@ -20,7 +20,7 @@
     <div class="page-header__inner">
         <h1 class="page-header__title">Notes</h1>
         {# <img class="page-header__image page-header__image--first page-header__image--scroll" src="/img/scroll.svg"> #}
-        <p class="page-header__description">Posts not-quite-ready-for-prime-time. Code snippets & brave beginnings of ideas.
+        <p class="page-header__description">Posts not-quite-ready-for-prime-time. Code snippets & brave beginnings of ideas. You can <a href="/rss/notes.xml">subscribe to this feed via RSS</a>.
     </div>
 </header>
 
