--- a/src/work.njk
+++ b/src/work.njk
@@ -15,7 +15,7 @@
 <header class="page-header page-header--case-studies">
     <div class="page-header__inner">
         <h1 class="page-header__title">Case Studies</h1>
-        <div class="page-header__bar">
+        <div class="page-header__bar" />
     </div>
 </header>
 
