--- a/src/writing.njk
+++ b/src/writing.njk
@@ -43,7 +43,7 @@
     <div class="container">
         <header class="writing-section-header">
             <h2 class="writing-section-header__title">Heaters From Friends & Brighter Minds Than Mine</h2>
-            <p class="writing-section-header__description">Blogroll of posts I’ve recently read and recommend. You can <a href="#">subscribe to this feed via RSS</a>.</p>
+            <p class="writing-section-header__description">Blogroll of posts I’ve recently read and recommend. You can <a href="/rss/reading-list.xml">subscribe to this feed via RSS</a>.</p>
         </header>
         <div class="recent-reading-list">
             <aside class="recent-reading-list__warning">
@@ -64,7 +64,7 @@
     <div class="container">
         <header class="writing-section-header">
             <h2 class="writing-section-header__title">Medium-Length Blog Posts & Tutorials</h2>
-            <p class="writing-section-header__description">The greatest trick the devil ever pulled was getting us to use the word “blog” in everyday conversation. You can <a href="#">subscribe to this feed via RSS</a>.</p>
+            <p class="writing-section-header__description">The greatest trick the devil ever pulled was getting us to use the word “blog” in everyday conversation. You can <a href="/rss/writing.xml">subscribe to this feed via RSS</a>.</p>
         </header>
         <div class="articles-list">
             {% for article in collections['article'] | sortedByPublishDate %}
