--- a/src/_components/home-about.webc
+++ b/src/_components/home-about.webc
@@ -7,7 +7,13 @@
 </script>
 <section class="home-about">
     <div class="container">
-        <h2 class="home-about__title">about the author</h2>
+        <h2 class="home-about__title">
+            <div class="home-about__title-inner">
+                <span class="home-about__title-echo" aria-hidden="true">about the author</span>
+                <span class="home-about__title-text">about the author</span>
+                <span class="home-about__title-echo" aria-hidden="true">about the author</span>
+            </div>
+        </h2>
         <div class="home-about__marquee">
             <div class="home-about__marquee-inner">
                 <template webc:for="n of [1, 2]" webc:nokeep @raw="quoteTemplate"></template>
