--- a/src/scss/components/_case-study-block.scss
+++ b/src/scss/components/_case-study-block.scss
@@ -1,5 +1,5 @@
-@use "../abstract/variables" as *;
-@use "../abstract/mixins" as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
 .case-study-block {
   position: relative;
@@ -25,7 +25,7 @@
     font-size: 0.75rem;
     display: inline-block;
     margin-block-end: 0.75rem;
-    content: "(0" counter(case-studies) ")";
+    content: '(0' counter(case-studies) ')';
     @include screen(xl) {
       align-self: start;
     }
@@ -82,7 +82,8 @@
       margin-block-end: 1rem;
     }
   }
-  &__link, &__coming-soon {
+  &__link,
+  &__coming-soon {
     font-size: 0.75rem;
     font-weight: bold;
     text-transform: uppercase;
@@ -98,17 +99,24 @@
     color: $color-text-mid;
   }
   &__link {
-    line-height: 1.3;
+    // line-height: 1.3;
     display: inline-block;
     margin-block-end: -1rem;
     padding-block: 1rem;
     text-decoration: none;
+    @include screen(xl) {
+      max-width: 23ch;
+      text-align: right;
+      text-wrap: balance;
+
+      line-height: 1;
+    }
 
     &:hover {
       text-decoration: underline;
     }
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       inset: 0;
     }
